# EnsembleSVM

./: .gitignore  AUTHORS  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  THANKS  aclocal.m4  brol  config.h.in  configure  configure.ac  doxygen.cfg
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
doc/: Makefile.am  Makefile.in  doxygen.cfg.in
include/: BinaryWorkflow.hpp  CLI.hpp  DataFile.hpp  Ensemble.hpp  Executable.hpp  Kernel.hpp  LibSVM.hpp  Models.hpp  PredicatedFactory.hpp  Registration.hpp  SelectiveFactory.hpp  SparseVector.hpp  ThreadPool.hpp  Type2str.hpp  Util.hpp  io.hpp
include/any_iterator/: any_iterator.hpp
include/any_iterator/detail/: any_iterator_abstract_base.hpp  any_iterator_metafunctions.hpp  any_iterator_wrapper.hpp
include/pipeline/: blocks.hpp  core.hpp  pipelines.hpp
libsvm-weights-3.17/: svm.cpp  svm.h
libsvm-weights-3.17/matlab/: svmtrain.c
libsvm-weights-3.17/python/: svm.py  svmutil.py
src/: BinaryWorkflow.cpp  CLI.cpp  DataFile.cpp  Ensemble.cpp  Kernel.cpp  LibSVM.cpp  Models.cpp  SparseVector.cpp  Threads.lo  Util.cpp  dot.cpp  io.cpp
src/pipeline/: pipelines.cpp
src/tests/: blocks.cpp  pipelines.cpp  sparsevector.cpp  test_blocks.cpp  test_pipelines.cpp  test_sparsevector.cpp  test_svmensemble.cpp  test_svmmodel.cpp  test_userdefkernel.cpp  test_workflow.cpp
src/tools/: bootstrap.cpp  cross-validate.cpp  dummy-generator.cpp  esvm-edit.cpp  esvm-predict.cpp  esvm-train.cpp  merge-models.cpp  sparse.cpp  split-data.cpp
tests/: dummy-generator.test  sparse.test  test_dummy-generator_dummies.txt  test_dummy-generator_input.txt  test_dummy-generator_reference.txt  test_sparse_input.txt  test_sparse_output.txt
